Devops/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-js-deployment
  labels:
    tags.datadoghq.com/env: app
    tags.datadoghq.com/service: react-js-service
    tags.datadoghq.com/version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-js
  template:
    metadata:
      labels:
        app: react-js
        tags.datadoghq.com/env: app
        tags.datadoghq.com/service: react-js-service
        tags.datadoghq.com/version: v1
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/js-lib.version: v5.5.0
    spec:
      containers:
      - name: react-js
        image: nodejsapplicationfordatadog.azurecr.io/myapp:latest
        resources:
          limits:
            memory: "356Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: my-acr-secret

---

apiVersion: v1
kind: Service
metadata:
  name: react-js-service
spec:
  type: LoadBalancer
  selector:
    app: react-js
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
